# icsdrone

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  TODO-MvK.txt  argparser.c  autogen.sh  board.c  computer.c  config.h.in  configure.ac  eval.c  eval.h  fics.c  ics_wrap.c  icsdrone.h  icsdroneng.pod  icsdroneng.spec.in  main.c  make_dist  make_release  marker.c  net.c  polyglot.c  proxy.c  sched.c  utils.c
debian/: README  changelog  changelog~  control  copyright  docs  files  icsdroneng.substvars  rules
